--- a/Android/common/ui-widget/src/main/res/values/colors.xml
+++ b/Android/common/ui-widget/src/main/res/values/colors.xml
@@ -76,6 +76,7 @@
     <color name="text_color_99">#999999</color>
     <color name="text_color_dd">#dddddd</color>
     <color name="white_20_percent">#33FFFFFF</color>
+    <color name="white_30_percent">#4DFFFFFF</color>
     <color name="white_35_percent">#59FFFFFF</color>
     <color name="white_60_percent">#99FFFFFF</color>
     <color name="white_70_percent">#B3FFFFFF</color>
@@ -83,6 +84,5 @@
     <color name="white_8_percent">#14FFFFFF</color>
     <color name="white_90_percent">#E5FFFFFF</color>
     <color name="yellow">#f4ea2a</color>
-
 
 </resources>
