[Fix][Android] 1.do not hide the virtual navigation bar, 2.update full dialog FT-

--- a/Android/scenes/show/src/main/res/layout/show_setting_advance_dialog_audience.xml
+++ b/Android/scenes/show/src/main/res/layout/show_setting_advance_dialog_audience.xml
@@ -5,6 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/white"
     tools:theme="@style/Theme.AppCompat"
+    android:paddingTop="@dimen/base_status_height"
     android:orientation="vertical">
 
     <FrameLayout
