--- a/Android/scenes/show/src/main/res/layout/show_widget_debug_setting_dialog.xml
+++ b/Android/scenes/show/src/main/res/layout/show_widget_debug_setting_dialog.xml
@@ -5,6 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/white"
+    android:paddingTop="@dimen/base_status_height"
     tools:theme="@style/Theme.AppCompat"
     android:orientation="vertical">
 
