--- a/Android/scenes/show/src/main/res/values/themes.xml
+++ b/Android/scenes/show/src/main/res/values/themes.xml
@@ -30,6 +30,17 @@
         <item name="enableEdgeToEdge">true</item>
     </style>
 
+    <style name="show_bottom_full_dialog" parent="Theme.AppCompat.Dialog">
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:backgroundDimEnabled">false</item>
+        <item name="android:backgroundDimAmount">0</item>
+        <item name="enableEdgeToEdge">true</item>
+        <item name="android:windowIsFloating">false</item>
+        <item name="android:windowSoftInputMode">adjustResize</item>
+        <item name="behavior_fitToContents">false</item>
+        <item name="behavior_peekHeight">0dp</item>
+    </style>
+
     <style name="show_toast_dialog" parent="Theme.AppCompat.Dialog">
         <item name="android:windowBackground">@android:color/transparent</item>
         <item name="android:backgroundDimEnabled">false</item>
