--- a/Android/common/ui-widget/src/main/res/layout/dialog_top_function.xml
+++ b/Android/common/ui-widget/src/main/res/layout/dialog_top_function.xml
@@ -7,7 +7,8 @@
     android:layout_height="wrap_content"
     android:background="@drawable/bg_top_dark_dialog"
     android:elevation="1dp"
-    android:minHeight="152dp">
+    android:paddingTop="@dimen/base_status_height"
+    android:minHeight="180dp">
 
     <LinearLayout
         android:id="@+id/layout_report"
