--- a/Android/common/ui-widget/src/main/res/drawable/bg_top_dark_dialog.xml
+++ b/Android/common/ui-widget/src/main/res/drawable/bg_top_dark_dialog.xml
@@ -2,7 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="#D9151325"/>
-    <corners android:bottomLeftRadius="20dp" android:bottomRightRadius="20dp"/>
+    <solid android:color="#F2151325"/>
+    <stroke android:color="@color/black" android:width="1dp"/>
+    <corners android:bottomLeftRadius="12dp" android:bottomRightRadius="12dp"/>
 
 </shape>
